# ukebook-md

./: .gitattributes  .gitignore  .pre-commit-config.yaml  500miles.udn  9-5_-_dolly_parton.udn  README.classes.md  README.md  a_little_respect_-_erasure.udn  africa_-_toto.udn  aint_nobody_-_chaka_khan.udn  all_night_long_-_lionel_ritchie.udn  bad_moon_rising_-_creedence_clearwater_revival.udn  bad_touch_-_bloodhound_gang.udn  basket_case_-_green_day.udn  boys_dont_cry_-_the_cure.udn  brown_eyed_girl_-_van_morrison.udn  california_dreaming_-_the_mamas_and_the_papas.udn  cant_take_my_eyes_off_you_-_frankie_valli.udn  chord_diagram.yml  chordgen.py  chords.yml  common_people_-_pulp.udn  country_house_-_blur.udn  creep_-_radiohead.udn  cssreset-min.css  dancing_in_the_dark_-_bruce_springsteen.udn  delilah_-_tom_jones.udn  dont_look_back_in_anger_-_oasis.udn  dont_stop_believin_-_journey.udn  dont_stop_me_now_-_queen.udn  dont_you_want_me_-_human_league.udn  dontstrop.txt  dreaming_of_you_-_the_coral.udn  everybody_needs_somebody_-_blues_brothers.udn  faith_-_george_michael.udn  fretboard.yml  friday_im_in_love_-_the_cure.udn  fuck_her_gently_-_tenacious_d.udn  genbook.py  genchords.py  (+61 more)
css/: chord.css  inline_styles.css  pdfprint.css  singers.css  ukebook.css  ukedown_elements.css
inputs/: 500_miles_-_the_proclaimers.udn  500miles.udn  a_little_respect-erasure.udn  a_little_respect_-_erasure.udn  africa_-_toto.udn  aint_nobody_-_chaka_khan.udn  all_night_long_-_lionel_ritchie.udn  back_for_good_-_take_that.udn  bad_moon_rising_-_creedence_clearwater_revival.udn  bad_touch_-_bloodhound_gang.udn  basket_case_-_green_day.udn  boys_dont_cry_-_the_cure.udn  brown_eyed_girl_-_van_morrison.udn  california_dreaming_-_the_mamas_and_the_papas.udn  cant_take_my_eyes_off_you_-_frankie_valli.udn  country_house_-_blur.udn  creep_-_radiohead.udn  dancing_in_the_dark_-_bruce_springsteen.udn  delilah_-_tom_jones.udn  dont_look_back_in_anger_-_oasis.udn  dont_stop_believin_-_journey.udn  dont_stop_me_now_-_queen.udn  dontstrop.txt  dreaming_of_you_-_the_coral.udn  faith_-_george_michael.udn  friday_im_in_love_-_the_cure.udn  fuck_her_gently_-_tenacious_d.udn  fuck_you_-_cee-lo_green.udn  get_lucky_-_daft_punk.udn  go_your_own_way_-_fleetwood_mac.udn  gold_-_spandau_ballet.udn  happy_-_pharrell_williams.udn  heroes_-_david_bowie.udn  hey_jude_-_the_beatles.udn  hot_n_cold_-_katy_perry.udn  i_want_to_break_free_-_queen.udn  im_a_believer_-_the_monkees.udn  ive_had_the_time_of_my_life_-_dirty_dancing.udn  jolene_-_dolly_parton.udn  kids_in_america_-_kim_wilde.udn  (+25 more)
songbook/: __init__.py  book.py  song.py
templates/: base.html.j2  bookindex.j2  chord.svg.j2  chord_ext.svg.j2  drawnchord.svg.j2  external_chord.svg.j2  fretboard.svg.j2  index.html.j2  inline_chord.svg.j2  inline_svg.j2  nav.xhtml.j2  onepage.html.j2  package.opf.j2  song.cls.html.j2  song.html.j2  song_ext.html.j2  song_external_svg.html.j2  ukesong.j2  ukesong_inline.j2
ukebook/: song.py
ukebook_md/: __init__.py  chordgen.py  chords.yml  fretboard.yml  genbook.py  makepdf.py  makesong.py  utils.py
ukebook_md/css/: chord.css  core.css  inline_styles.css  landscape.css  landscape_inverse.css  landscapepdf.css  pdfprint.css  pdfsinger.css  portrait.css  portrait_inverse.css  singers.css  ukebook.css  ukebook_responsive.css  ukedown_elements.css  ukedown_inverse.css
ukebook_md/templates/: base.html.j2  bookindex.j2  chord.svg.j2  chord_ext.svg.j2  cover.html.j2  index.html.j2  inline_chord.svg.j2  onepage.html.j2  package.opf.j2  song.css.j2  song.html.j2  song_ext.html.j2  song_external_svg.html.j2  song_inline_svg.html.j2
ukedown/: __init__.py  patterns.py  translations.py  udn.py
