[tool.poetry]
name = "ukebook-md"
version = "1.0.3"
description = "tools to build songbooks from UDN files"
authors = ["Stuart Sears <stuart@sjsears.com>"]
license = "GPL-3-Or-Later"

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^61.2" # 62.1 explodes with my CSS, must figure out why
ukedown = "^2.1.1"
lxml = "^5.1.1"
requests = "^2.32.2"
beautifulsoup4 = "^4.11.2"
PyYAML = "^6.0"
progress = "^1.6"
pip-tools = "^7.2.0"
jinja2 = "^3.1.4"
poetry-plugin-export = "^1.8.0"

dynaconf = "^3.2.5"
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.1.1"
ruff = "^0.4.4"
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20240311"
types-beautifulsoup4 = "^4.12.0.20240229"
pip-tools = "^7.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
htmlbook = "ukebook_md.genbook:main"
pdfbook = "ukebook_md.makepdf:main"
pdfsong = "ukebook_md.makesong:main"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "UP", "B", "SIM", "I"]
extend-select = ["B", "I"]
extend-fixable = ["I"]
#
[tool.ruff.format]
docstring-code-format = true
preview = true
#
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
