[project]
name = "ukebook-md"
version = "1.1.0"
description = "tools to build songbooks from UDN files"
authors = [
    {name = "Stuart Sears", email = "stuart@sjsears.com"}
]
maintainers = [
    {name = "Stuart Sears", email = "stuart@sjsears.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = "<4,>=3.12"
dependencies = [
  "weasyprint>=65.1",
  "ukedown>=2.1.1",
  "lxml>=5.3.2",
  "requests>=2.28.2",
  "beautifulsoup4>=4.13.4",
  "PyYAML>=6.0",
  "progress>=1.6",
  "pip-tools>=7.2.0",
  "jinja2>=3.1.6",
  "poetry-plugin-export>=1.9.0",
  "dynaconf>=3.2.10",
  "pydyf>=0.11.0",
  "pre-commit>=4.2.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
htmlbook = "ukebook_md.genbook:main"
pdfbook = "ukebook_md.makepdf:main"
pdfsong = "ukebook_md.makesong:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.1.1",
  "pre-commit>=3.1.1",
  "ruff>=0.4.4",
  "mypy>=1.9.0",
  "types-pyyaml>=6.0.12.20240311",
  "types-beautifulsoup4>=4.12.0.20250204",
  "pip-tools>=7.4.1",
  "sphinx-pyproject>=0.3.0",
  "sphinx>=7.3.7",
  "myst>=1.0.4",
]

[tool.sphinx-pyproject]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
]
